<?xml version="1.0"?>
<package>
  <name>r200_driver</name>
  <version>0.0.0</version>
  <description>The r200_driver package</description>
  <maintainer email="jrgnichodevel@gmail.com"></maintainer>
  <license>TODO</license>
  <author email="jrgnichodevel@gmail.com">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>DSAPI</run_depend>

  <export>
  </export>
</package>
